--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,36 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+button{
+  cursor: pointer;
+}
+
 .App{
   width: 90%;
   margin: auto;
-
+  height: 80vh;
+  
   .main{
     width: 100%;
-    
-    height: 100vh;
+    height: 80vh;
     display: flex;
+    padding-bottom: 2rem;
 
     .leftBar{
       width: 30%;
-      height: 100vh;
       position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .nameSocial{
+        font-size: 1.5rem;
+        font-family: 'Yeseva One', cursive;
+      }
     }
 
     .body{
-      width: 40%;
-      
-      height: 100vh;
+      width: 45%;
       position: relative;
     }
 
     .rightBar{
       width: 30%;
       border: 1px solid blue;
-      height: 100vh;
       position: relative;
     }
   }
@@ -50,10 +61,6 @@
       }
     }
   }
-  
-}
-
-@media screen and (min-width: 480px) {
   
 }
 
