--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-  }
+}
 
+body{
+    background-color: whitesmoke;
+}
