--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,7 +13,10 @@ button{
 .App{
   width: 90%;
   margin: auto;
-  height: 80vh;
+  
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   
   .main{
     width: 100%;
@@ -28,6 +31,7 @@ button{
       flex-direction: column;
       gap: 1rem;
 
+
       .nameSocial{
         font-size: 1.5rem;
         font-family: 'Yeseva One', cursive;
@@ -41,8 +45,10 @@ button{
 
     .rightBar{
       width: 30%;
-      border: 1px solid blue;
       position: relative;
+      display: flex;
+      gap: 1rem;
+      flex-direction: column;
     }
   }
 }
