--- a/src/components/TrendPost/TrendPost.module.scss
+++ b/src/components/TrendPost/TrendPost.module.scss
@@ -55,13 +55,12 @@
                 button{
                     background-color: transparent;
                     border: none;
-                    font-size: 1.3rem;
-                    background-color: #2f2f2f;
-                    padding: .5rem;
+                    font-size: 1.5rem;
+                    
                     border-radius: .2rem;
 
                     i{
-                        color: #FE6F27;
+                        color: black;
                     }
                 }
             }
