--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,10 +13,15 @@ button{
 .App{
   width: 90%;
   margin: auto;
-  
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  .containerHeader{
+    width: 90%;
+    position: fixed;
+    background-color: white;
+  }
   
   .main{
     width: 100%;
@@ -53,9 +58,36 @@ button{
   }
 }
 
-@media screen and (max-width: 767.9px) {
-
+@media screen and (max-width: 320px) {
+  
   .App{
+    gap: 1rem;
+
+    .main{
+      .leftBar,
+      .rightBar{
+        display: none;
+      }
+
+      .body{
+        width: 100%;
+      }
+    }
+
+    .containerMQNavBar{
+      width: fit-content;
+      position: fixed;
+      bottom: 0;
+      background-color: whitesmoke;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  
+  .App{
+    gap: 1rem;
+
     .main{
       .leftBar,
       .rightBar{
@@ -67,6 +99,15 @@ button{
       }
     }
   }
-  
+}
+
+@media screen and (min-width: 1024px) {
+  .App{
+    .containerHeader,
+    .containerMQSuggestFriendList,
+    .containerMQNavBar{
+      display: none;
+    }
+  }
 }
 
