--- a/src/components/StoriesList/StoriesList.module.scss
+++ b/src/components/StoriesList/StoriesList.module.scss
@@ -1,6 +1,5 @@
 .StoriesList{
     margin-top: 1rem;
-    margin-bottom: 1rem;
     background: #FFFFFF;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.37);
     display: flex;
@@ -23,3 +22,16 @@
     background-color: #FE6F27;
     border-radius: 1rem;
 }
+
+
+@media screen and (min-width: 320px) {
+    .StoriesList{
+        margin-top: 7rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .StoriesList{
+        margin-top: 1rem;
+    }
+  }
