working media query mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,12 +3,11 @@
     background-color: white;
 
     .containerHeader{
-        width: 90%;
         margin: auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1rem 0;
+        padding: 1rem;
     
        .nameSocial{
         
