--- a/src/components/MQNavBar/MQNavBar.module.scss
+++ b/src/components/MQNavBar/MQNavBar.module.scss
@@ -1,5 +1,6 @@
 .MQNavBar{
     width: 90%;
+    margin: auto;
     background-color: whitesmoke;
     display: flex;
     justify-content: space-between;
