--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,20 +11,21 @@ button{
 }
 
 .App{
-  width: 90%;
+  width: 100%;
   margin: auto;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 
   .containerHeader{
-    width: 90%;
+    width: 100%;
     position: fixed;
-    background-color: white;
+    background-color: whitesmoke;
   }
   
   .main{
-    width: 100%;
+    width: 90%;
+    margin: auto;
     height: 80vh;
     display: flex;
     padding-bottom: 2rem;
