--- a/src/components/StoriesList/StoriesList.module.scss
+++ b/src/components/StoriesList/StoriesList.module.scss
@@ -1,4 +1,6 @@
 .StoriesList{
+    width: 90%;
+    margin: auto;
     margin-top: 1rem;
     background: #FFFFFF;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.37);
@@ -26,7 +28,7 @@
 
 @media screen and (min-width: 320px) {
     .StoriesList{
-        margin-top: 7rem;
+        margin-top: 6rem;
     }
 }
 
