--- a/src/components/FriendList/FriendList.module.scss
+++ b/src/components/FriendList/FriendList.module.scss
@@ -40,3 +40,11 @@
     background-color: #FE6F27;
     border-radius: .2rem;
 }
+
+@media screen and (max-width: 767.9px) {
+
+    .FriendList{
+        height: 30rem;
+    }
+    
+}
