--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -113,3 +113,13 @@
         }
     }
 }
+
+@media screen and (max-width: 1023.9px) {
+
+    .Login{
+        .containerMemories, hr{
+            display: none;
+        }
+    }
+    
+}
